retrieved_metadata/package/objects/Wired_Mail_Sign_Up__c.object
<CustomObject>
    <fields>
        <fullName>Sign_Up_Date__c</fullName>
        <description>The date the User signed up for Wired Brain Mail.</description>
        <inlineHelpText>The date the User signed up for Wired Brain Mail.</inlineHelpText>
        <label>Sign Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Date__c</fullName>
        <description>If the User is no longer active, the date they unsubscribed to receive Wired Brain Mail.</description>
        <inlineHelpText>If the User is no longer active, the date they unsubscribed to receive Wired Brain Mail.</inlineHelpText>
        <label>Unsubscribe Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User who signed up for Wired Brain Mail.</description>
        <inlineHelpText>The User who signed up for Wired Brain Mail.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wired_Mail_Sign_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wired Mail Sign Up</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Sign_Up_Date__c</columns>
        <columns>Unsubscribe_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WMSU-{00000}</displayFormat>
        <label>Wired Mail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wired Mail Sign Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>